test/parallel/forall/checks/with-false.good
with-false.chpl:3: error: syntax error near 'false'
